samples/_failures_safe/1761497753_087b08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f99b69a.c: In function ‘main’:
./samples/SAFE/__tmp_3f99b69a.c:150:13: error: expected declaration or statement at end of input
  150 |             if (choice == 1) {
      |             ^~
./samples/SAFE/__tmp_3f99b69a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f99b69a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f99b69a.c:150:13: error: expected declaration or statement at end of input
